<resources>
    <string name="app_name">ShowCase</string>
    <string name="action_settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="changePassword">Change Password</string>
    <string name="removePassword">Remove Password</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="please_confirm_again">Please confirm again.</string>
    <string name="skip">Skip</string>
    <string name="deselect_all">Deselect all</string>
    <string name="share">share</string>
    <string name="delete">Delete</string>
    <string name="imgSynopsis">
        <b>Created Date:</b>%s\n
        <b>path:</b>%s<br />
    </string>
    <string name="synopsisTitle">
        <b>Image Synopsis</b>
    </string>
    <string name="name">Name:</string>
    <string name="size">Size:</string>
    <string name="created_date">Created Date:</string>
    <string name="path">Path:</string>
    <string name="ok">Ok</string>
    <string name="pin_it">Pin it !</string>
    <string name="image_info">Image Info</string>
    <string name="allPics">AllPhotos</string>
    <string name="set_pin">Set Pin</string>
    <string name="remove_password">Remove password</string>
    <string name="yeah_i_m">Yeah I\'m</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_remove_password_lock">Are you sure you want to remove password lock?</string>
    <string name="pin_not_matching_please_try_again">Pin not matching, please try again :(</string>
    <string name="pin_set">Pin set.</string>
    <string name="pattern_set">Pattern set.</string>
    <string name="pattern_not_macthing_plz_try_again">Pattern not matching, please try again :(</string>
</resources>
