<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:orderInCategory="100"
        android:title="@string/deselect_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_shareImages"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_deleteImages"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->

</menu>
